Add page elements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
   </head>
 
   <body>
-    
+    <div class="sidebar">
+      <div class="sidebar-banner">Cover</div>
+      <div class="sidebar-footer">Copyright © 2023 COVER Corp.</div>
+    </div>
+    <div class="content">
+      <div class="content-header">
+        <div class="content-container">
+          <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
+          <p>You <em>know</em> you want to</p>
+        </div>
+      </div>
+      <div class="content-body">
+        <div class="content-container">
+          <p>Let's do this!</p>
+          <form action="#" method="get" class="form" id="form">
+
+          </form>
+        </div>
+      </div>
+      <div class="content-footer">
+        <div class="content-container">
+          <button type="submit" form="form">Create Account</button>
+          <p>Already have an account? <a href="#">Log in</a></p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
