--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Signup Form</title>
     <link rel="stylesheet" href="styles.css">
   </head>
@@ -23,7 +23,18 @@
         <div class="content-container">
           <p>Let's do this!</p>
           <form action="#" method="get" class="form" id="form">
-
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username">
+            <label for="display-name">Display Name</label>
+            <input type="text" id="display-name" name="display-name">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email">
+            <label for="phone-number">Phone Number</label>
+            <input type="tel" id="phone-number" name="phone-number">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password">
+            <label for="confirm-password">Confirm Password</label>
+            <input type="password" id="confirm-password" name="confirm-password">
           </form>
         </div>
       </div>
