--- a/index.html
+++ b/index.html
@@ -23,18 +23,36 @@
         <div class="content-container">
           <p>Let's do this!</p>
           <form action="#" method="get" class="form" id="form">
-            <label for="username">Username</label>
-            <input type="text" id="username" name="username">
-            <label for="display-name">Display Name</label>
-            <input type="text" id="display-name" name="display-name">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email">
-            <label for="phone-number">Phone Number</label>
-            <input type="tel" id="phone-number" name="phone-number">
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password">
-            <label for="confirm-password">Confirm Password</label>
-            <input type="password" id="confirm-password" name="confirm-password">
+            <div class="form-row-container">
+              <div class="form-control-container">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username">
+              </div>
+              <div class="form-control-container">
+                <label for="display-name">Display Name</label>
+                <input type="text" id="display-name" name="display-name">
+              </div>
+            </div>
+            <div class="form-row-container">
+              <div class="form-control-container">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email">
+              </div>
+              <div class="form-control-container">
+                <label for="phone-number">Phone Number</label>
+                <input type="tel" id="phone-number" name="phone-number">
+              </div>
+            </div>
+            <div class="form-row-container">
+              <div class="form-control-container">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password">
+              </div>
+              <div class="form-control-container">
+                <label for="confirm-password">Confirm Password</label>
+                <input type="password" id="confirm-password" name="confirm-password">
+              </div>
+            </div>
           </form>
         </div>
       </div>
