--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <div class="sidebar">
-      <div class="sidebar-banner">Cover</div>
+      <div class="sidebar-banner"><img src="imgs/cover-logo.png" alt="Cover Corp. Logo"></img></div>
       <div class="sidebar-footer">Copyright © 2023 COVER Corp.</div>
     </div>
     <div class="content">
