Update inputs with validation

--- a/index.html
+++ b/index.html
@@ -22,21 +22,22 @@
       <div class="content-body">
         <div class="content-container">
           <p>Let's do this!</p>
+          <p>An asterisk (*) indicates a required field</p>
           <form action="#" method="get" class="form" id="form">
             <div class="form-row-container">
               <div class="form-control-container">
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username">
+                <label for="username">*Username</label>
+                <input type="text" id="username" name="username" required minlength="4" maxlength="16">
               </div>
               <div class="form-control-container">
-                <label for="display-name">Display Name</label>
-                <input type="text" id="display-name" name="display-name">
+                <label for="display-name">*Display Name</label>
+                <input type="text" id="display-name" name="display-name" required minlength="4" maxlength="16">
               </div>
             </div>
             <div class="form-row-container">
               <div class="form-control-container">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email">
+                <label for="email">*Email</label>
+                <input type="email" id="email" name="email" required>
               </div>
               <div class="form-control-container">
                 <label for="phone-number">Phone Number</label>
@@ -45,12 +46,12 @@
             </div>
             <div class="form-row-container">
               <div class="form-control-container">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password">
+                <label for="password">*Password</label>
+                <input type="password" id="password" name="password" required>
               </div>
               <div class="form-control-container">
-                <label for="confirm-password">Confirm Password</label>
-                <input type="password" id="confirm-password" name="confirm-password">
+                <label for="confirm-password">*Confirm Password</label>
+                <input type="password" id="confirm-password" name="confirm-password" required>
               </div>
             </div>
           </form>
