--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup Form</title>
     <link rel="stylesheet" href="styles.css">
   </head>
@@ -23,15 +23,15 @@
         <div class="content-container">
           <p>Let's do this!</p>
           <p>An asterisk (*) indicates a required field</p>
-          <form action="#" method="get" class="form" id="form">
+          <form action="results.html" method="get" class="form" id="form">
             <div class="form-row-container">
               <div class="form-control-container">
                 <label for="username">*Username</label>
-                <input type="text" id="username" name="username" required minlength="4" maxlength="16">
+                <input type="text" id="username" name="username" minlength="4" maxlength="16" required>
               </div>
               <div class="form-control-container">
                 <label for="display-name">*Display Name</label>
-                <input type="text" id="display-name" name="display-name" required minlength="4" maxlength="16">
+                <input type="text" id="display-name" name="display-name" minlength="4" maxlength="16" required>
               </div>
             </div>
             <div class="form-row-container">
@@ -47,11 +47,11 @@
             <div class="form-row-container">
               <div class="form-control-container">
                 <label for="password">*Password</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@$%^&?]).{8,32}$" required>
               </div>
               <div class="form-control-container">
                 <label for="confirm-password">*Confirm Password</label>
-                <input type="password" id="confirm-password" name="confirm-password" required>
+                <input type="password" id="confirm-password" name="confirm-password" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@$%^&?]).{8,32}$" required>
               </div>
             </div>
           </form>
