--- a/index.html
+++ b/index.html
@@ -27,31 +27,31 @@
             <div class="form-row-container">
               <div class="form-control-container">
                 <label for="username">*Username</label>
-                <input type="text" id="username" name="username" minlength="4" maxlength="16" required>
+                <input type="text" id="username" name="username" placeholder="" minlength="4" maxlength="16" required>
               </div>
               <div class="form-control-container">
                 <label for="display-name">*Display Name</label>
-                <input type="text" id="display-name" name="display-name" minlength="4" maxlength="16" required>
+                <input type="text" id="display-name" name="display-name" placeholder="" minlength="4" maxlength="16" required>
               </div>
             </div>
             <div class="form-row-container">
               <div class="form-control-container">
                 <label for="email">*Email</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" placeholder="" required>
               </div>
               <div class="form-control-container">
                 <label for="phone-number">Phone Number</label>
-                <input type="tel" id="phone-number" name="phone-number">
+                <input type="tel" id="phone-number" name="phone-number" placeholder="">
               </div>
             </div>
             <div class="form-row-container">
               <div class="form-control-container">
                 <label for="password">*Password</label>
-                <input type="password" id="password" name="password" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@$%^&?]).{8,32}$" required>
+                <input type="password" id="password" name="password" placeholder="" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@$%^&?]).{8,32}$" required>
               </div>
               <div class="form-control-container">
                 <label for="confirm-password">*Confirm Password</label>
-                <input type="password" id="confirm-password" name="confirm-password" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@$%^&?]).{8,32}$" required>
+                <input type="password" id="confirm-password" name="confirm-password" placeholder="" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@$%^&?]).{8,32}$" required>
               </div>
             </div>
           </form>
