Update inputs with title attributes

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
               <div class="form-control-container">
                 <label for="username">*Username</label>
                 <div>
-                  <input type="text" id="username" name="username" placeholder="" minlength="4" maxlength="16" required>
+                  <input type="text" id="username" name="username" placeholder="" minlength="4" maxlength="16" title="Minimum of 4 characters.&#013;Maximum of 16 characters." required>
                   <span class="material-symbols-outlined"></span>
                 </div>
               </div>
               <div class="form-control-container">
                 <label for="display-name">*Display Name</label>
                 <div>
-                  <input type="text" id="display-name" name="display-name" placeholder="" minlength="4" maxlength="16" required>
+                  <input type="text" id="display-name" name="display-name" placeholder="" minlength="4" maxlength="16" title="Minimum of 4 characters.&#013;Maximum of 16 characters." required>
                   <span class="material-symbols-outlined"></span>
                 </div>
               </div>
@@ -52,7 +52,7 @@
               <div class="form-control-container">
                 <label for="phone-number">Phone Number</label>
                 <div>
-                  <input type="tel" id="phone-number" name="phone-number" placeholder="">
+                  <input type="tel" id="phone-number" name="phone-number" placeholder="" title="">
                   <span class="material-symbols-outlined"></span>
                 </div>
               </div>
@@ -61,7 +61,7 @@
               <div class="form-control-container">
                 <label for="password">*Password</label>
                 <div>
-                  <input type="password" id="password" name="password" placeholder="" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@$%^&?]).{8,32}$" required>
+                  <input type="password" id="password" name="password" placeholder="" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@$%^&?]).{8,32}$" title="Minimum of 8 characters.&#013;Maximum of 32 characters.&#013;At least 1 number.&#013;At least 1 lowercase character.&#013;At least 1 uppercase character.&#013;At least 1 special character." required>
                   <span class="material-symbols-outlined"></span>
                 </div>
               </div>
