--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Signup Form</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
+    <script src="scripts.js" defer></script>
   </head>
 
   <body>
