--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
               <div class="form-control-container">
                 <label for="password">*Password</label>
                 <div>
-                  <input type="password" id="password" name="password" placeholder="" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@$%^&?]).{8,32}$" title="Minimum of 8 characters.&#013;Maximum of 32 characters.&#013;At least 1 number.&#013;At least 1 lowercase character.&#013;At least 1 uppercase character.&#013;At least 1 special character." required>
+                  <input type="password" id="password" name="password" placeholder="" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@$%^&?]).{8,}$" title="Minimum 8 characters.&#013;At least 1 number.&#013;At least 1 lowercase character.&#013;At least 1 uppercase character.&#013;At least 1 special character." required>
                   <span class="material-symbols-outlined"></span>
                 </div>
               </div>
               <div class="form-control-container">
                 <label for="confirm-password">*Confirm Password</label>
                 <div>
-                  <input type="password" id="confirm-password" name="confirm-password" placeholder="" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@$%^&?]).{8,32}$" required>
+                  <input type="password" id="confirm-password" name="confirm-password" placeholder="" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@$%^&?]).{8,}$" required>
                   <span class="material-symbols-outlined"></span>
                 </div>
               </div>
