Update placeholder text

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="content">
       <div class="content-header">
         <div class="content-container">
-          <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
-          <p>You <em>know</em> you want to</p>
+          <p>A project that will create an alternative world that you never knew existed, yet always imagined being. We will turn this possibility into a reality. Let's embark on this journey together with everyone!</p>
+          <p>What are <em>you</em> waiting for?</p>
         </div>
       </div>
       <div class="content-body">
