--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
                 <label for="username">*Username</label>
                 <div>
                   <input type="text" id="username" name="username" placeholder="" minlength="4" maxlength="16" title="Minimum of 4 characters.&#013;Maximum of 16 characters." required>
-                  <span class="material-symbols-outlined"></span>
+                  <span></span>
                 </div>
               </div>
               <div class="form-control-container">
                 <label for="display-name">*Display Name</label>
                 <div>
                   <input type="text" id="display-name" name="display-name" placeholder="" minlength="4" maxlength="16" title="Minimum of 4 characters.&#013;Maximum of 16 characters." required>
-                  <span class="material-symbols-outlined"></span>
+                  <span></span>
                 </div>
               </div>
             </div>
@@ -47,14 +47,14 @@
                 <label for="email">*Email</label>
                 <div>
                   <input type="email" id="email" name="email" placeholder="" required>
-                  <span class="material-symbols-outlined"></span>
+                  <span></span>
                 </div>
               </div>
               <div class="form-control-container">
                 <label for="phone-number">Phone Number</label>
                 <div>
                   <input type="tel" id="phone-number" name="phone-number" placeholder="" title="">
-                  <span class="material-symbols-outlined"></span>
+                  <span></span>
                 </div>
               </div>
             </div>
@@ -62,19 +62,28 @@
               <div class="form-control-container">
                 <label for="password">*Password</label>
                 <div>
-                  <input type="password" id="password" name="password" placeholder="" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@$%^&?]).{8,}$" title="Minimum 8 characters.&#013;At least 1 number.&#013;At least 1 lowercase character.&#013;At least 1 uppercase character.&#013;At least 1 special character." required>
-                  <span class="material-symbols-outlined"></span>
+                  <input type="password" id="password" name="password" placeholder="" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@$%^&?]).{8,}$" title="At least 1 number.&#013;At least 1 lowercase character.&#013;At least 1 uppercase character.&#013;At least 1 special character.&#013;Minimum 8 characters." required>
+                  <span></span>
                 </div>
               </div>
               <div class="form-control-container">
                 <label for="confirm-password">*Confirm Password</label>
                 <div>
                   <input type="password" id="confirm-password" name="confirm-password" placeholder="" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@$%^&?]).{8,}$" required>
-                  <span class="material-symbols-outlined"></span>
+                  <span></span>
                 </div>
               </div>
             </div>
           </form>
+          <div class="password-validation">
+            <ul>
+              <li class="pass-number-validation">At least 1 number.</li>
+              <li class="pass-lowercase-validation">At least 1 lowercase character.</li>
+              <li class="pass-uppercase-validation">At least 1 uppercase character.</li>
+              <li class="pass-special-validation">At least 1 special character.</li>
+              <li class="pass-minimum-validation">Minimum 8 characters.</li>
+            </ul>
+          </div>
         </div>
       </div>
       <div class="content-footer">
