Update class names

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
             <div class="form-row-container">
               <div class="form-control-container">
                 <label for="username">*Username</label>
-                <div>
+                <div class="validation-container">
                   <input type="text" id="username" name="username" placeholder="" minlength="4" maxlength="16" title="Minimum of 4 characters.&#013;Maximum of 16 characters." required>
                   <span></span>
                 </div>
               </div>
               <div class="form-control-container">
                 <label for="display-name">*Display Name</label>
-                <div>
+                <div class="validation-container">
                   <input type="text" id="display-name" name="display-name" placeholder="" minlength="4" maxlength="16" title="Minimum of 4 characters.&#013;Maximum of 16 characters." required>
                   <span></span>
                 </div>
@@ -45,14 +45,14 @@
             <div class="form-row-container">
               <div class="form-control-container">
                 <label for="email">*Email</label>
-                <div>
+                <div class="validation-container">
                   <input type="email" id="email" name="email" placeholder="" required>
                   <span></span>
                 </div>
               </div>
               <div class="form-control-container">
                 <label for="phone-number">Phone Number</label>
-                <div>
+                <div class="validation-container">
                   <input type="tel" id="phone-number" name="phone-number" placeholder="" title="">
                   <span></span>
                 </div>
@@ -61,14 +61,14 @@
             <div class="form-row-container">
               <div class="form-control-container">
                 <label for="password">*Password</label>
-                <div>
+                <div class="validation-container">
                   <input type="password" id="password" name="password" placeholder="" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@$%^&?]).{8,}$" title="At least 1 number.&#013;At least 1 lowercase character.&#013;At least 1 uppercase character.&#013;At least 1 special character.&#013;Minimum 8 characters." required>
                   <span></span>
                 </div>
               </div>
               <div class="form-control-container">
                 <label for="confirm-password">*Confirm Password</label>
-                <div>
+                <div class="validation-container">
                   <input type="password" id="confirm-password" name="confirm-password" placeholder="" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@$%^&?]).{8,}$" required>
                   <span></span>
                 </div>
