--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
               <div class="form-control-container">
                 <label for="password">*Password</label>
                 <div class="validation-container">
+                  <span class="material-symbols-outlined password">visibility</span>
                   <input type="password" id="password" name="password" placeholder="" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@$%^&?]).{8,}$" title="At least 1 number.&#013;At least 1 lowercase character.&#013;At least 1 uppercase character.&#013;At least 1 special character.&#013;Minimum 8 characters." required>
                   <span></span>
                 </div>
@@ -69,6 +70,7 @@
               <div class="form-control-container">
                 <label for="confirm-password">*Confirm Password</label>
                 <div class="validation-container">
+                  <span class="material-symbols-outlined confirm-password">visibility</span>
                   <input type="password" id="confirm-password" name="confirm-password" placeholder="" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@$%^&?]).{8,}$" required>
                   <span></span>
                 </div>
