Update form action path
Also update JS to show successful form submit alert

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="content-container">
           <p>Let's do this!</p>
           <p>An asterisk (*) indicates a required field</p>
-          <form action="results.html" method="get" class="form" id="form">
+          <form action="#" method="get" class="form" id="form">
             <div class="form-row-container">
               <div class="form-control-container">
                 <label for="username">*Username</label>
