Refactor toggle visibility function
Move associated code blocks in JS for readability.

Update HTML and CSS for new visibility icons.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <label for="password">*Password</label>
                 <div class="validation-container">
                   <input type="password" id="password" name="password" placeholder="" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@#$%^&?]).{8,}$" title="At least 1 number.&#013;At least 1 lowercase character.&#013;At least 1 uppercase character.&#013;At least 1 special character.&#013;Minimum 8 characters." required>
-                  <span class="material-symbols-outlined password"></span>
+                  <span class="material-symbols-outlined visibility password invisible"></span>
                   <span class="material-symbols-outlined"></span>
                 </div>
               </div>
@@ -71,7 +71,7 @@
                 <label for="confirm-password">*Confirm Password</label>
                 <div class="validation-container">
                   <input type="password" id="confirm-password" name="confirm-password" placeholder="" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[*.!@#$%^&?]).{8,}$" required>
-                  <span class="material-symbols-outlined confirm-password"></span>
+                  <span class="material-symbols-outlined visibility confirm-password invisible"></span>
                   <span class="material-symbols-outlined"></span>
                 </div>
               </div>
