--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
               </div>
               <div class="form-control-container">
-                <label for="phone-number">Phone Number</label>
+                <label for="phone-number">Phone Number<span>(optional)</span></label>
                 <div class="validation-container">
                   <input type="tel" id="phone-number" name="phone-number" placeholder="" title="">
                   <span class="material-symbols-outlined"></span>
